--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     .math-font {
       font-family: 'JetBrains Mono', monospace;
     }
+    /* Simple fix for potential layout issues */
+    #root {
+      min-height: 100vh;
+    }
   </style>
 <script type="importmap">
 {
@@ -23,8 +27,8 @@
     "react": "https://esm.sh/react@18.3.1",
     "react-dom": "https://esm.sh/react-dom@18.3.1",
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
-    "lucide-react": "https://esm.sh/lucide-react?external=react",
-    "recharts": "https://esm.sh/recharts?external=react,react-dom",
+    "lucide-react": "https://esm.sh/lucide-react@0.344.0?external=react",
+    "recharts": "https://esm.sh/recharts@2.12.2?external=react,react-dom",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/"
   }
